# casper-webrtc-stream

./: .env.example  .gitignore  AUDIT.md  HANDOFF.md  ONCHAIN.md  README.md  STATUS.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.claude/: launch.json
.claude/skills/casper-x402/: SKILL.md
.claude/skills/odra/: SKILL.md
apps/consumer/: next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/consumer/components/: PaymentConsent.tsx  StreamViewer.tsx  WalletConnect.tsx
apps/consumer/lib/: casper.ts  csprclick-signer.ts  csprclick.ts
apps/consumer/pages/: _app.tsx  index.tsx
apps/consumer/styles/: globals.css
apps/provider/: next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/provider/components/: EarningsPanel.tsx  StreamControls.tsx  ViewerList.tsx
apps/provider/lib/: casper.ts  demoStream.ts  server-rail.ts
apps/provider/pages/: index.tsx
apps/provider/styles/: globals.css
apps/signaling/: package.json  tsconfig.json
contracts/cep18-x402/: Cargo.toml  Odra.toml  README.md  rust-toolchain.toml
contracts/cep18-x402/src/: cep18_x402.rs  lib.rs
contracts/cep18-x402/tests/: integration.rs
docs/: INTEGRATION.md  USAGE.md  X402.md
examples/ai-agent-stream/: README.md  package.json
examples/basic-stream/: README.md  index.ts  package.json
examples/paid-api/: README.md  client.mjs  package.json  server.mjs
scripts/: generate-wallet.mjs  test-crypto-gate.mjs  test-e2e.mjs  test-facilitator.mjs  test-signing.mjs
scripts/deploy/: deploy-token.mjs
skills/: README.md
skills/cspr-click/: SKILL.md
skills/cspr-cloud/: SKILL.md
skills/odra/: llms.txt
tests/: casper-format.test.mjs  crypto-gate.test.mjs  datachannel.test.mjs  eip712-signing.test.mjs  payment-gate.test.mjs  rail-facilitator.test.mjs  rail-payload.test.mjs  session-manager.test.mjs  x402-http.test.mjs
(+7 files in other folders)
